[package]
name = "tiktoklive"
version = "0.1.0-revived"
description = "A revived Rust library to receive events from TikTok LIVE in realtime."
homepage = "https://github.com/magradze/TikTokLiveRust" # Replace with your own information
repository = "https://github.com/magradze/TikTokLiveRust" # Replace with your own information
keywords = ["api", "stream", "tiktok", "live", "tiktok-live", "prost"]
categories = ["api-bindings", "network-programming"]
license = "MIT OR Apache-2.0"
edition = "2021"
authors = ["JW", "Giorgi Magradze"] # Add your name

[dependencies]
# Network requests
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
tokio-tungstenite = { version = "0.23", features = ["native-tls"] }
tokio = { version = "1", features = ["full"] }
futures-util = "0.3"
url = "2.5"

# Data serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bytes = "1.6"

# Modern implementation of Protobuf
prost = "0.12"

# Logging and error handling
tracing = "0.1"
thiserror = "1.0"
anyhow = "1.0"
log = "0.4" # Keep this, as it may be needed for old code
urlencoding = "2.1.3"
env_logger = "0.11.8"

[build-dependencies]
# Build-time code generation from .proto files
prost-build = "0.12"
